<resources>
    <string name="app_name">Score Keeper</string>
    <string name="player_1">Player 1</string>
    <string name="road">Road</string>
    <string name="city">City</string>
    <string name="cloister">Cloister</string>
    <string name="end_turn">End Turn</string>
    <string name="player_2">Player 2</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="reset">Reset</string>
    <string name="score_default">0</string>
    <string name="quantity_default">0</string>
</resources>
